--- a/YggdrasilNetwork.entitlements
+++ b/YggdrasilNetwork.entitlements
@@ -12,7 +12,7 @@
 	</array>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.eu.neilalexander.yggdrasil</string>
+		<string>group.com.dulcedosystems.yggdrasil</string>
 	</array>
 </dict>
 </plist>
